--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@ Every project I build reflects my passion for technology and creativity. </div>
   <button id="backTop"><i class="fas fa-arrow-up"></i></button>
 </footer>
 
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
+
 
