--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> DHINAKARAN | Portfolio</title>
+<title>DHINAKARAN | Portfolio</title>
 <link rel="stylesheet" href="css/styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>c
+</head>
 <body>
 <!-- Navigation -->
 <header>
@@ -42,44 +42,40 @@
   <h2 class="section-title">About Me</h2>
   <div class="about-container">
     <div class="about-text">
-      <p> I’m dhinakaran, a web enthusiast who turns lines of code into beautiful, functional web experiences.
-I specialize in HTML, CSS, and JavaScript, and I love experimenting with interactive designs and responsive layouts.
-Every project I build reflects my passion for technology and creativity. </div>
+      <p>I’m Dhinakaran, a web enthusiast who turns lines of code into beautiful, functional web experiences.
+         I specialize in HTML, CSS, and JavaScript, and I love experimenting with interactive designs and responsive layouts.
+         Every project I build reflects my passion for technology and creativity.</p>
+    </div>
     <div class="about-img">
       <img src="assets/portfolioimage.jpg" alt="About Image">
     </div>
   </div>
 </section>
+
 <!-- Skills Section -->
 <section id="skills" class="section">
   <h2 class="section-title">Skills</h2>
-
   <div class="skills-grid">
-
     <div class="skill-card">
       <i class="fab fa-html5 skill-icon"></i>
       <h3>HTML</h3>
       <p>Structure, semantic tags, SEO-friendly coding</p>
     </div>
-
     <div class="skill-card">
       <i class="fab fa-css3-alt skill-icon"></i>
       <h3>CSS</h3>
       <p>Flexbox, Grid, animations, responsive design</p>
     </div>
-
     <div class="skill-card">
       <i class="fab fa-js skill-icon"></i>
       <h3>JavaScript</h3>
       <p>DOM, events, API handling, dynamic UI</p>
     </div>
-
     <div class="skill-card">
       <i class="fab fa-react skill-icon"></i>
       <h3>React</h3>
       <p>Components, hooks, state management</p>
     </div>
-
   </div>
 </section>
 
@@ -87,54 +83,40 @@ Every project I build reflects my passion for technology and creativity. </div>
 <section id="projects" class="section">
   <h2 class="section-title">Projects</h2>
   <div class="projects-grid">
-
-    <!-- Project 1 -->
     <div class="project-card" id="project1">
       <h3>Personal Portfolio Website</h3>
       <p>Interactive portfolio showcasing my skills, projects, and contact info.</p>
     </div>
-
-    <!-- Project 2 -->
     <div class="project-card" id="project2">
       <h3>Digital Resume Builder</h3>
       <p>Create professional PDF resumes dynamically using JavaScript.</p>
     </div>
-
-    <!-- Project 3 -->
     <div class="project-card" id="project3">
       <h3>E-Commerce Product Listing Page</h3>
       <p>Responsive product catalog with filters and search functionality.</p>
     </div>
-
-    <!-- Project 4 -->
     <div class="project-card" id="project4">
       <h3>Startup Landing Page</h3>
       <p>Modern landing page with hero section, features, and contact form.</p>
     </div>
-
-    <!-- Project 5 -->
     <div class="project-card" id="project5">
       <h3>To-Do List Web App</h3>
       <p>Interactive task manager with add, edit, delete, and complete features.</p>
     </div>
-
   </div>
 </section>
+
 <!-- Contact Section -->
 <section id="contact" class="section">
   <h2 class="section-title">Contact Me</h2>
-
   <div class="contact-card">
-
     <div class="contact-left">
-      <h3>Let's Connect </h3>
+      <h3>Let's Connect</h3>
       <p>If you want to collaborate, hire, or discuss anything related to web development, feel free to reach out!</p>
-
       <div class="contact-details">
         <p><i class="fas fa-user"></i> DHINAKARAN</p>
-        <h2><i class="fas fa-envelope"></i> <a href="mailto:youremail@gmail.com"> dhinakaran@gmail.com</a></h2>
+        <h2><i class="fas fa-envelope"></i> <a href="mailto:dhinakaran@gmail.com">dhinakaran@gmail.com</a></h2>
       </div>
-
       <div class="social-icons">
         <a href="#" target="_blank"><i class="fab fa-github"></i></a>
         <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -142,27 +124,36 @@ Every project I build reflects my passion for technology and creativity. </div>
         <a href="#"><i class="fas fa-envelope"></i></a>
       </div>
     </div>
-
     <div class="contact-right">
       <form id="contactForm">
-        <input type="text" placeholder="Your name" required>
-        <input type="email" placeholder="your Email" required>
-        <textarea placeholder="Your Message" required></textarea>
+        <div class="form-group">
+          <label for="name">Your Name</label>
+          <input type="text" id="name" placeholder="Your name" required>
+        </div>
+        <div class="form-group">
+          <label for="email">Your Email</label>
+          <input type="email" id="email" placeholder="your Email" required>
+        </div>
+        <div class="form-group">
+          <label for="message">Your Message</label>
+          <textarea id="message" placeholder="Your Message" required></textarea>
+        </div>
         <button type="submit">Send Message</button>
       </form>
     </div>
-
   </div>
 </section>
 
 <!-- Footer -->
 <footer>
-  <p>© <span id="year"></span>DHINAKARAN</p>
+  <p>© <span id="year"></span> DHINAKARAN</p>
   <button id="backTop"><i class="fas fa-arrow-up"></i></button>
 </footer>
 
 <script src="js/main.js"></script>
 </body>
 </html>
+
+
 
 
